Design is ready but with alignment bugs

--- a/style.css
+++ b/style.css
@@ -1,16 +1,42 @@
 /* Things can't use because of IE8 compatibility */
 /* Grid / flexbox */
-/* calc function */
+/* calc() and many more */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 body{
     background-color: #3f406c;
     color: white;
+    font-size: 1.25rem;
 }
+
+span,p,input {
+    font-size: 1.25rem;
+    color: white;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+.large-font {
+    font-size: 5.96rem;
+}
+
+/* modular scale
+
+3.052rem/30.52px
+2.441rem/24.41px	
+1.953rem/19.53px	
+1.563rem/15.63px	
+1.25rem/12.50px
+1rem/10.00px
+
+*/
 
 /* nav starts */
 .circle,
@@ -98,27 +124,34 @@ input[type=email] {
 
 /* main starts */
 main {
-    width: 1000px;
+    width: 1200px;
     margin: 100px auto 100px auto;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .container {
     
 }
 
-.container__box {
-    /* height: 500px; */
-    border: 1px solid green;
-    position: relative;
-}
-
 .single{
-    width: 246px;
+    width: 295px;
 }
 
 .double{
-    width: 498px;
+    width: 596px;
+}
+
+.container__box {
+    height: 490px;
+    background-color: #5a5f89;
+    position: relative;
+    margin: 0px 5px 5px 0px;
+}
+
+.container__box:nth-child(3),
+.container__box:nth-child(7),
+.container__box:last-child {
+    margin: 0;    
 }
 
 img {
@@ -127,6 +160,7 @@ img {
 
 .custom-circle {
     position: relative;
+    margin-bottom: 15px;
 }
 
 .outer-circle {
@@ -150,14 +184,97 @@ img {
     background-color: #ab8fd9;
 }
 
+.custom-circle-bgcolor-2{
+    background-color: #ffc718;
+}
+
+.custom-circle-bgcolor-3{
+    background-color: #55566b;
+}
+
+.custom-circle-bgcolor-4{
+    background-color: #ee728a;
+}
+
+.custom-circle-bgcolor-5{
+    background-color: #2cc3cc;
+}
+
+.custom-circle-bgcolor-6{
+    background-color: #f2f5fc;
+}
+
+.custom-circle-bgcolor-7{
+    background-color: #000000;
+}
+
+.custom-circle-bgcolor-8{
+    background-color: #5ca8f3;
+}
+
 .custom-circle__tag{
     margin-left: 20px;
 }
 
+.container__box__bottom {
+    margin-top: 50px;
+}
+
 .container__box__bottom img,
-.container__box__bottom svg {
+.container__box__bottom svg,
+.container__box__bottom span {
     width: 20px;
     height: 20px;
     fill: #cccccc;
     vertical-align: middle;
+    line-height: normal;
+    margin-right: 5px;
+}
+
+.container__box__bottom span {
+    margin-right: 30px;
+}
+
+.container__box__content{
+    padding: 19px;
+}
+
+.container__box div div h3 {
+    margin-bottom: 15px;
+}
+
+.container__box div div p {
+    height: 60px;
+    overflow:hidden;
+    position: relative;
+}
+
+.container__box div div p::before{
+    content: "...";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.container__box div div p::after {
+    width: 1rem;
+    height: 2rem;
+    background: #5a5f89;
+    content: "";
+    position: absolute;
+    right: 0;
+  }
+
+.try-button {
+    font-size: 1.8rem;
+    color: #ffffff;
+    background-color: #aa8ed9;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 3px;
+    margin-top: 20px;
+}
+
+.margin-right-3px {
+    margin: 0px 3px 0px 0px;
 }
